<resources>
    <string name="app_name">rydeit</string>

    <!-- Bottom Nav Menu strings -->
    <string name="nav_home">首頁</string>
    <string name="nav_purchase">申購</string>
    <string name="nav_asset">資產</string>
    <string name="nav_wallet">錢包</string>
    <string name="nav_account">帳戶</string>

    <!--登入-->
    <string name="login_title">登入 Rydeit 發財車 👋</string>
    <string name="login_email">電子信箱</string>
    <string name="remember_email">記住信箱</string>
    <string name="login_email_hint">farmer@gmail.com</string>
    <string name="register_or_login">註冊 / 登入</string>
    <string name="login_password">密碼</string>
    <string name="forget_password">忘記密碼</string>
    <string name="login_password_hint">請輸入密碼</string>
    <string name="button_next">繼續</string>
    <string name="first_time_use">第一次使用？</string>
    <string name="register_account">註冊帳號</string>
    <string name="dialog_login_fail_title">登入失敗</string>
    <string name="dialog_login_fail_msg">信箱或密碼錯誤，請重新輸入</string>
    <string name="btn_text_close">關閉</string>
    <string name="verify_email">信箱驗證</string>
    <string name="verify_email_hint">請輸入信箱驗證碼</string>
    <string name="send_verify_code">發送驗證碼</string>
    <string name="resend_verify_code">重新發送</string>
    <string name="verify_phone">手機驗證</string>
    <string name="verify_phone_hint">請輸入簡訊驗證碼</string>
    <string name="google_2fa">Google雙重驗證</string>
    <string name="google_2fa_hint">請輸入 Google 雙重驗證碼</string>
    <string name="button_verify">進行驗證</string>
    <string name="reenter_email_password">重新輸入信箱及密碼</string>
    <string name="dialog_verify_fail_title">驗證失敗</string>
    <string name="dialog_verify_fail_msg">請重新發送驗證碼進行驗證 或重新輸入信箱及手機</string>

    <!--Pin 碼-->
    <string name="pin_title_set_pin">設定 Pin 碼 🔒</string>
    <string name="set_pin_subtitle">請設定您的 Pin 碼</string>
    <string name="reset_pin">重新設定</string>
    <string name="pin_title_enter_pin_to_unlock">輸入 Pin 碼解鎖</string>
    <string name="pin_subtitle_set_pin">請設定您的 Pin 碼</string>
    <string name="pin_subtitle_set_pin_again">請再次輸入 Pin 碼</string>
    <string name="pin_subtitle_enter_your_pin">請輸入您的 Pin 碼</string>
    <string name="forget_pin">忘記 Pin 碼？</string>
    <string name="re_login">請重新登入</string>

    <!--註冊-->
    <string name="register_title">註冊 Rydeit 發財車 👋</string>
    <string name="register_phone">手機號碼</string>
    <string name="register_phone_hint">+886123456789</string>
    <string name="button_next_step">下一步</string>
    <string name="already_have_account">我已經有帳號</string>
    <string name="go_login">前往登入</string>
    <string name="agree_privacy_term">我已閱讀且同意</string>
    <string name="privacy_term">隱私權政策與條款</string>
    <string name="reenter_email_phone">重新輸入信箱及手機</string>
    <string name="nickname">暱稱</string>
    <string name="nickname_hint">請輸入暱稱</string>
    <string name="set_password">建立密碼</string>
    <string name="set_password_hint">請輸入密碼</string>
    <string name="password_more_than_8_digits">密碼達 8 個字元以上</string>
    <string name="password_can_have_these_symbol">僅使用大小寫英文字母、數字或 ~!@#$%^&#038;;*()_+={}:";'&#060;&#062;?,./ 以上符號</string>
    <string name="confirm_password">確認密碼</string>
    <string name="confirm_password_hint">再次輸入密碼</string>
    <string name="referral">推薦碼</string>
    <string name="referral_hint">請填選推薦碼</string>
    <string name="button_finish_register">完成註冊</string>
    <string name="dialog_register_success_title">註冊完成</string>
    <string name="dialog_register_success_msg">歡迎搭乘 Rydeit 發財車</string>
    <string name="btn_text_login">登入</string>

    <!--忘記密碼-->
    <string name="forget_password_title">Rydeit 發財車－忘記密碼 🚜</string>
    <string name="back_to_login_view">返回登入畫面</string>
    <string name="button_finish_reset_password">完成密碼重設</string>
    <string name="dialog_reset_password_title">重設密碼成功</string>
    <string name="dialog_reset_password_msg">您已成功設定新密碼</string>

    <!--首頁-->
    <string name="stablecoin_revenue_title">穩定幣收益</string>
    <string name="stablecoin_revenue_description">你在 Rydeit 發財車近 24 小時穩定幣報酬</string>
    <string name="stablecoin_totol_asset_title">穩定幣總資產</string>
    <string name="stablecoin_totol_asset_description">可用餘額及申購淨值加總</string>
    <string name="invisible">$*******</string>
    <string name="recommend_product_title">精選方案</string>
    <string name="fund_intro">方案介紹</string>
    <string name="plan_card_purchasing">開放申購</string>
    <string name="plan_card_processing">進行中</string>
    <string name="plan_card_coming_soon">即將開放</string>
    <string name="rate_of_return">年化報酬</string>
    <string name="performance">績效</string>
    <string name="plan_card_button_text_processing">方案進行中</string>
    <string name="finish_register">完成登記</string>

    <!--申購-->
    <string name="last_step_button">上一步</string>
    <string name="next_step_button">下一步</string>
    <string name="purchase_plan">申購標的</string>
    <string name="purchase_plan_hint">選擇申購標的</string>
    <string name="purchase_currency">申購幣種</string>
    <string name="purchase_currency_hint">選擇幣種</string>
    <string name="add_value">前往充值</string>
    <string name="wallet_balance_default">錢包餘額：尚未選擇幣種</string>
    <string name="purchase_amount">申購金額</string>
    <string name="purchase_amount_hint">每次至少申購 100 USD</string>
    <string name="purchase_form_title_step1">第一步－方案設定</string>
    <string name="purchase_form_description_step1">請確認「申購金額與方案起始日」</string>
    <string name="bottom_sheet_title_choose_plan">選擇方案</string>
    <string name="bottom_sheet_title_choose_currency">選擇幣種</string>
    <string name="bottom_sheet_title_capital_detail">資金明細</string>
    <string name="purchase_form_title_step2">第二步－權利義務須知</string>
    <string name="purchase_form_description_step2">請確認「申購服務約定條款」</string>
    <string name="field_title_plan_name">申購標的</string>
    <string name="purchase_field_title_plan_name">申購標的</string>
    <string name="purchase_field_title_manage_fee">管理費</string>
    <string name="purchase_field_title_performance_fee">績效費</string>
    <string name="purchase_field_title_invest_target">方案投放標的</string>
    <string name="purchase_field_title_invest_start_time">方案開始時間</string>
    <string name="purchase_field_title_insurance">已投保理賠險</string>
    <string name="purchase_field_title_stop_loss">此方案止損點</string>
    <string name="agree_purchase_online_term">我已閱讀且同意 Rydeit 發財車</string>
    <string name="purchse_online_term">線上申購方案服務約定條款</string>

</resources>