<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_default"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navigation_purchase"
        android:icon="@drawable/ic_purchase_default"
        android:title="@string/nav_purchase" />

    <item
        android:id="@+id/navigation_asset"
        android:icon="@drawable/ic_asset_default"
        android:title="@string/nav_asset" />

    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/ic_wallet_default"
        android:title="@string/nav_wallet" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_default"
        android:title="@string/nav_account" />

</menu>