<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ForgetPasswordActivity">


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_v_5"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_v_95"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <com.rydeit.io.ui.customview.LoginTopBar
        android:id="@+id/login_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:login_top_bar_title="@string/forget_password_title"/>


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline_v_5"
        app:layout_constraintRight_toRightOf="@id/guideline_v_95"
        app:layout_constraintTop_toBottomOf="@id/login_top_bar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_marginTop="@dimen/rydrit_forget_password_top_bar_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <com.rydeit.io.ui.customview.CustomTextInputLayout
                android:id="@+id/email_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/login_email"
                app:hint="@string/login_email_hint"
                app:inputType="textEmailAddress"
                />

            <com.rydeit.io.ui.customview.CustomTextInputLayout
                android:id="@+id/sms_verify_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/rydeit_text_input_spacing"
                app:title="@string/verify_email"
                app:hint="@string/verify_email_hint"
                app:inputType="number"
                app:buttonText="@string/send_verify_code"/>


            <Button
                android:id="@+id/verify_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/rydrit_action_button_spacing"
                style="@style/Widget.Rydeit.Button"
                android:enabled="false"
                android:text="@string/button_next"/>

            <Button
                android:id="@+id/back_to_login_button"
                style="@style/Widget.Rydeit.Button.TextButton.Superlink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/rydeit_second_action_button_spacing"
                android:text="@string/back_to_login_view"/>

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>