<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginVerifyActivity">


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_v_5"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_v_95"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <include
        android:id="@+id/top_bar_login"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        layout="@layout/view_login_top_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline_v_5"
        app:layout_constraintRight_toRightOf="@id/guideline_v_95"
        app:layout_constraintTop_toBottomOf="@id/top_bar_login"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:id="@+id/rec_welcome_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_welcome_msg"
                android:textAppearance="@style/TextAppearance.Rydeit.Title"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:src="@drawable/nav_wallet"/>
        </LinearLayout>

        <com.rydeit.io.ui.customview.CustomTextInputLayout
            android:id="@+id/email_verify_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:title="@string/verify_email"
            app:hint="@string/verify_email_hint"
            app:inputType="text"
            app:buttonText="@string/send_verify_code"
            />

        <com.rydeit.io.ui.customview.CustomTextInputLayout
            android:id="@+id/phone_verify_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:title="@string/verify_phone"
            app:hint="@string/verify_phone_hint"
            app:inputType="text"
            app:buttonText="@string/send_verify_code"/>

        <com.rydeit.io.ui.customview.CustomTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:title="@string/google_2fa"
            app:hint="@string/google_2fa_hint"
            app:inputType="text"/>

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            style="@style/Widget.Rydeit.Button"
            android:enabled="false"
            android:text="@string/button_verify"/>

        <Button
            style="@style/Widget.Rydeit.Button.TextButton.Superlink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/reenter_email_password"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>