<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <TextView
        style="@style/TextAppearance.Rydeit.BottomSheetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase_form_title_step1"
        android:layout_gravity="left"/>

    <TextView
        style="@style/TextAppearance.Rydeit.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase_form_description_step1"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/white_rec_round_large"
        android:padding="@dimen/rydeit_purchase_card_padding_small"
        android:layout_marginTop="20dp">



        <com.rydeit.io.ui.customview.CustomTextInputLayoutPresentBottomSheet
            android:id="@+id/plan_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:text_field_title="@string/purchase_plan"
            app:text_field_hint="@string/purchase_plan_hint"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/rydeit_purchase_text_input_spacing">


            <com.rydeit.io.ui.customview.CustomTextInputLayoutPresentBottomSheet
                android:id="@+id/currency_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:text_field_title="@string/purchase_currency"
                app:text_field_hint="@string/purchase_currency_hint"/>

            <TextView
                android:id="@+id/wallet_balance"
                style="@style/TextAppearance.Rydeit.CaptionGreyBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallet_balance_default"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/add_value_button"
                app:layout_constraintBottom_toBottomOf="@id/add_value_button"
                />

            <Button
                android:id="@+id/add_value_button"
                style="@style/Widget.Rydeit.Button.TextButton.Superlink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_value"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/currency_text_input_layout"
                android:textSize="12sp"
                android:letterSpacing="0.1"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/amount_text_input_layout"
            layout="@layout/view_text_input_layout_max_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/rydeit_purchase_text_input_spacing"
            />

    </LinearLayout>

</LinearLayout>