<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterStep2Activity">


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_v_5"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_v_95"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <com.rydeit.io.ui.customview.RegisterTopBar
        android:id="@+id/register_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:phase="2"/>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline_v_5"
        app:layout_constraintRight_toRightOf="@id/guideline_v_95"
        app:layout_constraintTop_toBottomOf="@id/register_top_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <com.rydeit.io.ui.customview.CustomTextInputLayout
            android:id="@+id/email_verify_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:title="@string/verify_email"
            app:hint="@string/verify_email_hint"
            app:inputType="number"
            app:buttonText="@string/send_verify_code"
            />

        <com.rydeit.io.ui.customview.CustomTextInputLayout
            android:id="@+id/phone_verify_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:title="@string/verify_phone"
            app:hint="@string/verify_phone_hint"
            app:inputType="number"
            app:buttonText="@string/send_verify_code"/>

        <Button
            android:id="@+id/verify_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/Widget.Rydeit.Button"
            android:enabled="false"
            android:text="@string/button_verify"/>

        <Button
            android:id="@+id/reenter_email_phone_button"
            style="@style/Widget.Rydeit.Button.TextButton.Superlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/reenter_email_phone"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>