<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterStep3Activity">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_v_5"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_v_95"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <com.rydeit.io.ui.customview.RegisterTopBar
        android:id="@+id/register_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:phase="3"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline_v_5"
        app:layout_constraintRight_toRightOf="@id/guideline_v_95"
        app:layout_constraintTop_toBottomOf="@id/register_top_bar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">


            <com.rydeit.io.ui.customview.CustomTextInputLayout
                android:id="@+id/nickname_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/nickname"
                app:hint="@string/nickname_hint"
                app:inputType="text"
                />

            <com.rydeit.io.ui.customview.CustomTextInputLayout
                android:id="@+id/password_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/rydeit_text_input_spacing"
                app:title="@string/set_password"
                app:hint="@string/set_password_hint"
                app:inputType="textPassword"/>

            <include
                android:id="@+id/password_check_for_length"
                layout="@layout/view_password_helper_text"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <include
                android:id="@+id/password_check_for_symbol"
                layout="@layout/view_password_helper_text"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <com.rydeit.io.ui.customview.CustomTextInputLayout
                android:id="@+id/confirm_password_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/rydeit_text_input_spacing"
                app:title="@string/confirm_password"
                app:hint="@string/confirm_password_hint"
                app:inputType="textPassword"/>

            <com.rydeit.io.ui.customview.CustomTextInputLayout
                android:id="@+id/referral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/rydeit_text_input_spacing"
                app:title="@string/referral"
                app:hint="@string/referral_hint"
                app:inputType="text"/>

            <Button
                android:id="@+id/finish_register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/rydrit_action_button_spacing"
                style="@style/Widget.Rydeit.Button"
                android:enabled="false"
                android:text="@string/button_finish_register"/>

        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>